// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RichTextEditor /> render disabled 1`] = `
<div
  className="form-group ora-tinymce"
>
  <label
    htmlFor="rich-text-response"
  >
    Your response
     (
    Optional
    )
  </label>
  <Editor
    className="bg-white"
    disabled={true}
    init={
      Object {
        "base_url": "http://localhost:18000/static/js/vendor/tinymce/js/tinymce",
        "content_css": "studio-tmce5",
        "height": "300",
        "menubar": false,
        "plugins": "code image link lists",
        "readonly": 1,
        "schema": "html5",
        "skin": "studio-tmce5",
        "statusbar": false,
        "toolbar": false,
      }
    }
    name="rich-text-response"
    onEditorChange={[MockFunction onChange]}
    value="value"
  />
</div>
`;

exports[`<RichTextEditor /> render optional 1`] = `
<div
  className="form-group ora-tinymce"
>
  <label
    htmlFor="rich-text-response"
  >
    Your response
     (
    Optional
    )
  </label>
  <Editor
    className="bg-white"
    disabled={false}
    init={
      Object {
        "base_url": "http://localhost:18000/static/js/vendor/tinymce/js/tinymce",
        "content_css": "studio-tmce5",
        "height": "300",
        "menubar": false,
        "plugins": "code image link lists",
        "schema": "html5",
        "skin": "studio-tmce5",
        "statusbar": false,
        "toolbar": "formatselect | bold italic underline | link blockquote image | numlist bullist outdent indent | strikethrough | code | undo redo",
      }
    }
    name="rich-text-response"
    onEditorChange={[MockFunction onChange]}
    value="value"
  />
</div>
`;

exports[`<RichTextEditor /> render required 1`] = `
<div
  className="form-group ora-tinymce"
>
  <label
    htmlFor="rich-text-response"
  >
    Your response
     (
    Required
    )
  </label>
  <Editor
    className="bg-white"
    disabled={false}
    init={
      Object {
        "base_url": "http://localhost:18000/static/js/vendor/tinymce/js/tinymce",
        "content_css": "studio-tmce5",
        "height": "300",
        "menubar": false,
        "plugins": "code image link lists",
        "schema": "html5",
        "skin": "studio-tmce5",
        "statusbar": false,
        "toolbar": "formatselect | bold italic underline | link blockquote image | numlist bullist outdent indent | strikethrough | code | undo redo",
      }
    }
    name="rich-text-response"
    onEditorChange={[MockFunction onChange]}
    value="value"
  />
</div>
`;
